# Weaver

./: .env  .env.example  .gitignore  01-product.md  02-architecture.md  404.html  CONTRIBUTING.md  README.md  ROADMAP.md  TODO (Phase 1.2).md  TODO (Phase 1.3).md  TODO (Phase 2.1).md  TODO (Phase 2.2).md  TODO (Phase 2.4).md  TODO(Phase 2.3).md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
a_master_blueprint/: index.html
concepts/memory/: index.html
concepts/policy/: index.html
concepts/space/: index.html
design/whitepaper_v1/: index.html
docs/: a_master_blueprint.md  getting_started.md  index.md  installation.md
docs/concepts/: memory.md  policy.md  space.md
docs/design/: whitepaper_v1.md
docs/legacy/: whitepaper_v1.md
docs/reference/: graph.md  models.md  runtime.md  tools.md
examples/: hello_graph.py
examples/cli_demo/: financial_counseling.py
experiments/: analyze_results.py  baselines.py  metrics.py  runner.py
experiments/analysis/: RESULTS_SUMMARY.md
experiments/tasks/: negotiation.py  team_conflict.py
getting_started/: index.html
installation/: index.html
legacy/: index.html
legacy/whitepaper_v1/: index.html
reference/_auto_index/: index.html
reference/graph/: index.html
reference/models/: index.html
reference/runtime/: index.html
reference/tools/: index.html
scripts/: gen_nav.py
search/: search_index.json
src/weaver/: exceptions.py
static/js/: main.js
templates/: index.html
whitepaper_v1/: index.html
(+16 files in other folders)
